Fix: add 'white-space: pre-wrap' to <pre> text for breaking word when there is too much text in <pre> tag

--- a/src/scss/layout/_invoice_preview.scss
+++ b/src/scss/layout/_invoice_preview.scss
@@ -42,6 +42,7 @@
 				padding-bottom: 0.5em;
 				margin-bottom: 0.2em;
 				border-bottom: 1px solid $black;
+				white-space: pre-wrap;
 			}
 
 			& .footnote {
